--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-<h1> Hello World</h1>
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@d-reczek 
+infoshareacademy
+/
+jfdzr5-team-notes
+Private
+3
+0
+0
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+jfdzr5-team-notes/projects/project-1/index.html
+@cytrowski
+cytrowski Initial HTML content
+Latest commit 0841300 5 minutes ago
+ History
+ 1 contributor
+41 lines (38 sloc)  861 Bytes
+  
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Jan Kowalski</h1>
+    <h2>Cześć!</h2>
+    <p>
+      To jest przykładowa strona profilowa. Swoją własną zrealizujesz w ramach
+      projektu na zajęciach :)
+    </p>
+    <h3>Poczytaj</h3>
+    <ul>
+      <li>Blog</li>
+      <li>Email</li>
+      <li>Newsletter</li>
+    </ul>
+
+    <h3>Pingnij mnie</h3>
+    <ul>
+      <li>Twitter</li>
+      <li>Instagram</li>
+      <li>Dribbble</li>
+    </ul>
+
+    <h3>Zobacz</h3>
+    <ul>
+      <li>Projekt 1</li>
+      <li>Projekt 2</li>
+      <li>Projekt 3</li>
+    </ul>
+
+    <footer>
+      <p>&copy;2021 - Jan Kowalski</p>
+    </footer>
+  </body>
+</html>
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Loading complete
