add logo text about me and style all of them

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="wrapper">
       <nav>
         <div class="navigation">
+          <div class="logo"><img src="resources/my-logo.png" alt="" /></div>
           <ul class="links-web">
             <li><a href="">Strona główna</a></li>
             <li><a href="">O mnie</a></li>
@@ -38,7 +39,7 @@
                 class="git-hub"
                 href="https://github.com/d-reczek?tab=repositories"
                 target="blank"
-                ><img class="git-hub" src="resources/hit-hub-logo.svg" alt=""
+                ><img class="git-hub" src="resources/git-hub-logo.svg" alt=""
               /></a>
             </li>
           </ul>
@@ -47,12 +48,15 @@
       <section class="page-1">
         <div class="wrapper-page-1">
           <div class="about-me">
-            <h1>Cześć mam na imię Darek</h1>
+            <h1>Cześć mam na imię <br><b>Darek Reczek</b></h1>
             <p class="about-me-paragraph">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-              amet exercitationem voluptatum. Facere, officiis. Molestias, enim
-              repudiandae, officiis rerum alias nulla eligendi natus laborum
-              veritatis aliquid beatae autem, atque perspiciatis?
+              Jakiś czas temu stwierdziłem, że muszę zmienić coś w swoim życiu.
+              <blockquote class="about-me-paragraph-blockquote">"...musisz sobie odpowiedzieć na jedno zaj...ie, ale to zaj...ie ważne pytanie: co chcesz robić w życiu – i zacząć to robić"...</blockquote> <p class="about-me-paragraph"> Stwierdziłem, że lubie spędzać czas przy
+              komputerze tworząc na nim różne rzeczy oraz rozwiązując rozmaite
+              problemy. Skoro stwierdziłem, że lubie to robić więc zrobiłem krok
+              żeby zacząć to robić i rozpoczałem swoją przygodę z
+              programowaniem.
+            </p>
             </p>
           </div>
           <div class="my-photo">
