fix hover on links

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <li>
               <a
                 class="git-hub"
-                href="https://github.com/d-reczek?tab=repositories"
+                href="https://github.com/d-reczek"
                 target="blank"
-                ><img class="git-hub" src="resources/git-hub-logo.svg" alt=""
+                ><img src="resources/git-hub-logo.svg" alt=""
               /></a>
             </li>
           </ul>
