add comment from DM

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
           <ul class="links-soc">
             <li>
               <a
+              aria-label="Przejdz na mój profil na Linked-In"
+              aria-hidden="true"
                 class="linked-in"
                 href="https://www.linkedin.com/in/dariusz-reczek-18a6a9214/"
                 target="blank"
@@ -46,10 +48,14 @@
           </ul>
         </div>
       </nav>
+      <!-- wrzucic main  -->
       <section class="page-1">
+        <!-- usun page-1 -->
         <div class="wrapper-page-1">
           <div class="about-me">
+            <!-- wrzucic w header  -->
             <h1>Cześć mam na imię <br><b>Darek Reczek</b></h1>
+            <!-- blockoute osobno nie w p nie domkniety p -->
             <p class="about-me-paragraph">
               Jakiś czas temu stwierdziłem, że muszę zmienić coś w swoim życiu.
               <blockquote class="about-me-paragraph-blockquote">"...musisz sobie odpowiedzieć na jedno zaj...ie, ale to zaj...ie ważne pytanie: co chcesz robić w życiu – i zacząć to robić"...</blockquote> <p class="about-me-paragraph"> Stwierdziłem, że lubie spędzać czas przy
