--- a/index.html
+++ b/index.html
@@ -1,76 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" href="resources/my-logo.png">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <title>DR - przyszły Fronted Developer</title>
-  </head>
-  <body>
-    <div class="wrapper">
-      <nav>
-        <div class="navigation">
-          <div class="logo"><img src="resources/my-logo.png" alt="" /></div>
-          <ul class="links-web">
-            <li><a href="">Strona główna</a></li>
-            <li><a href="">O mnie</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Kontakt</a></li>
-         
-          </ul>
-          <ul class="links-soc">
-            <li>
-              <a
-              aria-label="Przejdz na mój profil na Linked-In"
-              aria-hidden="true"
-                class="linked-in"
-                href="https://www.linkedin.com/in/dariusz-reczek-18a6a9214/"
-                target="blank"
-                ><img src="resources/linked-in-logo.svg" alt=""
-              /></a>
-            </li>
-            <li>
-              <a
-                class="git-hub"
-                href="https://github.com/d-reczek"
-                target="blank"
-                ><img src="resources/git-hub-logo.svg" alt=""
-              /></a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <!-- wrzucic main  -->
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="icon" href="resources/my-logo.png">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,400&display=swap"
+    rel="stylesheet" />
+  <title>DR - przyszły Fronted Developer</title>
+</head>
+
+<body>
+  <div class="wrapper">
+    <nav>
+      <div class="navigation">
+        <div class="container-logo"><img src="resources/my-logo.png" alt="" /></div>
+        <ul class="links-web">
+          <li><a href="">Strona główna</a></li>
+          <li><a href="">O mnie</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Kontakt</a></li>
+        </ul>
+        <ul class="links-soc">
+          <li>
+            <a aria-label="Przejdz na mój profil na Linked-In" aria-hidden="true" class="linked-in"
+              href="https://www.linkedin.com/in/dariusz-reczek-18a6a9214/" target="blank"><img
+                src="resources/linked-in-logo.svg" alt="" /></a>
+          </li>
+          <li>
+            <a class="git-hub" href="https://github.com/d-reczek" target="blank"><img src="resources/git-hub-logo.svg"
+                alt="" /></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- wrzucic main  -->
+    <main>
       <section class="page-1">
         <!-- usun page-1 -->
-        <div class="wrapper-page-1">
-          <div class="about-me">
-            <!-- wrzucic w header  -->
-            <h1>Cześć mam na imię <br><b>Darek Reczek</b></h1>
-            <!-- blockoute osobno nie w p nie domkniety p -->
-            <p class="about-me-paragraph">
-              Jakiś czas temu stwierdziłem, że muszę zmienić coś w swoim życiu.
-              <blockquote class="about-me-paragraph-blockquote">"...musisz sobie odpowiedzieć na jedno zaj...ie, ale to zaj...ie ważne pytanie: co chcesz robić w życiu – i zacząć to robić"...</blockquote> <p class="about-me-paragraph"> Stwierdziłem, że lubie spędzać czas przy
-              komputerze tworząc na nim różne rzeczy oraz rozwiązując rozmaite
-              problemy. Skoro stwierdziłem, że lubie to robić więc zrobiłem krok
-              żeby zacząć to robić i rozpoczałem swoją przygodę z
-              programowaniem.
-            </p>
-            </p>
-          </div>
-          <div class="my-photo">
-            <img src="resources/my-photo.jpg" alt="Moje zdjęcie nad morzem" />
-          </div>
+        <!-- <div class="wrapper-page-1"> -->
+        <div class="about-me">
+          <!-- wrzucic w header  -->
+          <h1>Cześć mam na imię <br><b>Darek Reczek</b></h1>
+          <!-- blockoute osobno nie w p nie domkniety p -->
+          <p class="about-me-paragraph">
+            Jakiś czas temu stwierdziłem, że muszę zmienić coś w swoim życiu.</p>
+          <blockquote class="about-me-paragraph-blockquote">"...musisz sobie odpowiedzieć na jedno zaj...ie, ale to
+            zaj...ie ważne pytanie: co chcesz robić w życiu – i zacząć to robić"...
+          </blockquote>
+          <p class="about-me-paragraph"> Stwierdziłem, że lubie spędzać czas przy
+            komputerze tworząc na nim różne rzeczy oraz rozwiązując rozmaite
+            problemy. Skoro stwierdziłem, że lubie to robić więc zrobiłem krok
+            żeby zacząć to robić i rozpoczałem swoją przygodę z
+            programowaniem.
+          </p>
+          </p>
         </div>
+        <div class="my-photo">
+          <img src="resources/my-photo.jpg" alt="Moje zdjęcie nad morzem" />
+        </div>
+        <!-- </div> -->
       </section>
-    </div>
-  </body>
+    </main>
+  </div>
+</body>
+
 </html>
