--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <div class="wrapper">
     <nav>
       <div class="navigation">
-        <div class="container-logo"><img src="resources/my-logo.png" alt="" /></div>
+        
+          <div class="container-logo"><img src="resources/my-logo.png" alt="" /></div>
+      
         <ul class="links-web">
           <li><a href="">Strona główna</a></li>
           <li><a href="">O mnie</a></li>
@@ -67,6 +69,7 @@
       </section>
     </main>
   </div>
+  <script src="/main .js"></script>
 </body>
 
 </html>
