--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         </ul>
         <ul class="links-soc">
           <li>
-            <a aria-label="Przejdz na mój profil na Linked-In" aria-hidden="true" class="linked-in"
+            <a aria-label="Przejdz na mój profil na Linked-In" aria-hidden="true" class="links-soc-item linked-in"
               href="https://www.linkedin.com/in/dariusz-reczek-18a6a9214/" target="blank"><img
                 src="resources/linked-in-logo.svg" alt="" /></a>
           </li>
           <li>
-            <a class="git-hub" href="https://github.com/d-reczek" target="blank"><img src="resources/git-hub-logo.svg"
+            <a class="links-soc-item git-hub" href="https://github.com/d-reczek" target="blank"><img src="resources/git-hub-logo.svg"
                 alt="" /></a>
           </li>
         </ul>
@@ -77,7 +77,13 @@
         <!-- </div> -->
       </section>
     </main>
+    <footer>
+      <p class="copy-right">&copy; 2021 All rights reserverd</p>
+      <p class="made-by">Made by D. Reczek</p>
+
+    </footer>
   </div>
+ 
   <script src="/main .js"></script>
 </body>
 
