--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="reset.css"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="icon" href="resources/my-logo.png">
@@ -19,8 +19,6 @@
   <div class="wrapper">
     <nav>
       <div class="navigation">
-        
-
         <div class="container-logo"><img src="resources/my-logo.png" alt="" /></div>
         <div class="hamburger">
           <span class="bar"></span>
@@ -30,10 +28,10 @@
 
         <ul class="links-web">
 
-          <li><a href="">Strona główna</a></li>
+          <li><a href="./index.html">Strona główna</a></li>
           <li><a href="">O mnie</a></li>
           <li><a href="">Portfolio</a></li>
-          <li><a href="">Kontakt</a></li>
+          <li><a href="/form-contact.html">Kontakt</a></li>
         </ul>
         <ul class="links-soc">
           <li>
@@ -42,21 +40,21 @@
                 src="resources/linked-in-logo.svg" alt="" /></a>
           </li>
           <li>
-            <a class="links-soc-item git-hub" href="https://github.com/d-reczek" target="blank"><img src="resources/git-hub-logo.svg"
-                alt="" /></a>
+            <a class="links-soc-item git-hub" href="https://github.com/d-reczek" target="blank"><img
+                src="resources/git-hub-logo.svg" alt="" /></a>
           </li>
         </ul>
-       
+
       </div>
     </nav>
     <!-- wrzucic main  -->
     <main>
-      <section class="page-1">
+      <section class="main-page">
         <!-- usun page-1 -->
         <!-- <div class="wrapper-page-1"> -->
         <div class="about-me">
           <!-- wrzucic w header  -->
-          <h1>Cześć mam na imię <br><b>Darek Reczek</b></h1>
+          <h1 class="h1-main-page">Cześć mam na imię <br><b>Darek Reczek</b></h1>
           <!-- blockoute osobno nie w p nie domkniety p -->
           <p class="about-me-paragraph">
             Jakiś czas temu stwierdziłem, że muszę zmienić coś w swoim życiu.</p>
@@ -83,7 +81,7 @@
 
     </footer>
   </div>
- 
+
   <script src="/main .js"></script>
 </body>
 
