--- a/form-contact.html
+++ b/form-contact.html
@@ -21,7 +21,9 @@
       <nav>
         <div class="navigation">
           <div class="container-logo">
-            <img src="resources/my-logo.png" alt="" />
+            <a href="./index.html"
+              ><img src="resources/my-logo.png" alt=""
+            /></a>
           </div>
           <div class="hamburger">
             <span class="bar"></span>
