--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
   <div class="wrapper">
     <nav>
       <div class="navigation">
-        <div class="container-logo"><img src="resources/my-logo.png" alt="" /></div>
+        <div class="container-logo">
+          <a href="./index.html"
+            ><img src="resources/my-logo.png" alt=""
+          /></a>
+        </div>
         <div class="hamburger">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -52,7 +56,7 @@
       <section class="main-page">
         <!-- usun page-1 -->
         <!-- <div class="wrapper-page-1"> -->
-        <div class="about-me">
+        <div class="about-me-container">
           <!-- wrzucic w header  -->
           <h1 class="h1-main-page">Cześć mam na imię <br><b>Darek Reczek</b></h1>
           <!-- blockoute osobno nie w p nie domkniety p -->
