add photo to form page

--- a/form-contact.html
+++ b/form-contact.html
@@ -60,7 +60,7 @@
         </div>
       </nav>
       <main>
-        <section class="page-1">
+        <section class="contact-page">
           <div class="form-contact-container">
             <form class="form-contact" action="form.php" method="POST">
               <h2 class="form-contact">Kontakt do mnie</h2>
@@ -90,6 +90,9 @@
               ></textarea>
               <button class="btn-form-send" type="submit">Wyślij</button>
             </form>
+          </div>
+          <div class="photo-container">
+            <img src="./resources/form-photo.jpg" alt="" />
           </div>
         </section>
       </main>
