--- a/about-me.html
+++ b/about-me.html
@@ -60,47 +60,15 @@
         </div>
       </nav>
       <main>
-        <section class="contact-page">
-          <div class="form-contact-container">
-            <form class="form-contact" action="form.php" method="POST">
-              <h2 class="form-contact">Kontakt do mnie</h2>
-              <label for="email">E-mail</label>
-              <input
-                type="email"
-                name="email"
-                id="email"
-                required
-                placeholder="Podaje swój e-mail"
-              />
-              <label for="name">Imie</label>
-              <input
-                type="name"
-                name="name"
-                id="name"
-                required
-                placeholder="Podaj swoje imię"
-                pattern="[A-ząćęłńśóźż]{2,}"
-                title="Tylko litery"
-              />
-              <label for="message">Wiadomość</label>
-              <textarea
-                name="message"
-                required
-                placeholder="Wpisz swoją wiadomość"
-              ></textarea>
-              <button class="btn-form-send" type="submit">Wyślij</button>
-            </form>
-          </div>
-          <div class="photo-container">
-            <img src="./resources/form-photo.jpg" alt="" />
-          </div>
-        </section>
+        <section class="about-me-page"></section>
+        <h2 class="h2-about-me"></h2>
       </main>
       <footer>
         <p class="copy-right">&copy; 2021 All rights reserverd</p>
         <p class="made-by">Made by D. Reczek</p>
       </footer>
     </div>
+
     <script src="/main .js"></script>
   </body>
 </html>
