--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <ul class="links-web">
 
           <li><a href="./index.html">Strona główna</a></li>
-          <li><a href="">O mnie</a></li>
-          <li><a href="">Portfolio</a></li>
+          <li><a href="./about-me.html">O mnie</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="/form-contact.html">Kontakt</a></li>
         </ul>
         <ul class="links-soc">
