--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div class="wrapper">
+    <div class="wrapper background-color-border-radius-wrapper">
       <nav>
         <div class="navigation">
           <div class="container-logo">
@@ -61,7 +61,9 @@
       </nav>
       <main>
         <section class="portfolio-page">
-          <h2 class="h2-portfolio-page"></h2>
+          <div class="wrapper">
+            <h2 class="h2-portfolio-page">Moje projekty</h2>
+          </div>
         </section>
       </main>
       <footer>
