--- a/about-me.html
+++ b/about-me.html
@@ -61,7 +61,9 @@
       </nav>
       <main>
         <section class="about-me-page"></section>
-        <h2 class="h2-about-me"></h2>
+        <div class="wrapper">
+          <h2 class="h2-about-me">O mnie</h2>
+        </div>
       </main>
       <footer>
         <p class="copy-right">&copy; 2021 All rights reserverd</p>
