add grid skeleto to portfolio

--- a/form-contact.html
+++ b/form-contact.html
@@ -63,6 +63,7 @@
         <section class="contact-page">
           <div class="wrapper contact-page-flex-container">
             <div class="form-contact-container">
+              <!-- GITHUB doesnt work with PHP -->
               <form class="form-contact" action="form.php" method="POST">
                 <h2 class="form-contact">Kontakt do mnie</h2>
                 <label for="email">E-mail</label>
