--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,11 @@
         <section class="portfolio-page">
           <div class="wrapper">
             <h2 class="h2-portfolio-page">Moje projekty</h2>
+            <div class="grid-projects">
+              <div class="project-box project-1"><a href="">Project 1</a></div>
+              <div class="project-box project-2"><a href="">Project 2</a></div>
+              <div class="project-box project-3"><a href="">Project 3</a></div>
+            </div>
           </div>
         </section>
       </main>
