--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/CSS/reset.css" />
+    <link rel="stylesheet" href="/CSS/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" href="resources/my-logo.png" />
@@ -32,10 +32,10 @@
           </div>
 
           <ul class="links-web">
-            <li><a href="./index.html">Strona główna</a></li>
-            <li><a href="./about-me.html">O mnie</a></li>
-            <li><a href="./portfolio.html">Portfolio</a></li>
-            <li><a href="/form-contact.html">Kontakt</a></li>
+            <li><a href="/index.html">Strona główna</a></li>
+            <li><a href="/pages/about-me.html">O mnie</a></li>
+            <li><a href="/pages/portfolio.html">Portfolio</a></li>
+            <li><a href="/pages/form-contact.html">Kontakt</a></li>
           </ul>
           <ul class="links-soc">
             <li>
@@ -71,6 +71,6 @@
       </footer>
     </div>
 
-    <script src="/main .js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
