add fix from validation

--- a/pages/form-contact.html
+++ b/pages/form-contact.html
@@ -76,7 +76,7 @@
                 />
                 <label for="name">Imie</label>
                 <input
-                  type="name"
+                  type="text"
                   name="name"
                   id="name"
                   required
@@ -84,7 +84,7 @@
                   pattern="[A-ząćęłńśóźż]{2,}"
                   title="Tylko litery"
                 />
-                <label for="message">Wiadomość</label>
+                <label>Wiadomość</label>
                 <textarea
                   name="message"
                   required
