--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -21,8 +21,8 @@
       <nav>
         <div class="navigation">
           <div class="container-logo">
-            <a href="./index.html"
-              ><img src="resources/my-logo.png" alt=""
+            <a href="/index.html"
+              ><img src="/resources/my-logo.png" alt=""
             /></a>
           </div>
           <div class="hamburger">
