--- a/index.html
+++ b/index.html
@@ -1,94 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/reset.css" />
-    <link rel="stylesheet" href="/CSS/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" href="resources/my-logo.png" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <title>DR - przyszły Fronted Developer</title>
-  </head>
+<html lang="pl">
 
-  <body>
-    <div class="wrapper">
-      <nav>
-        <div class="navigation">
-          <div class="container-logo">
-            <a href="./index.html"
-              ><img src="resources/my-logo.png" alt=""
-            /></a>
-          </div>
-          <div class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./CSS/reset.css" />
+  <link rel="stylesheet" href="./CSS/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="icon" href="resources/my-logo.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,400&display=swap"
+    rel="stylesheet" />
+  <title>DR - przyszły Fronted Developer</title>
+</head>
 
-          <ul class="links-web">
-            <li><a href="/index.html">Strona główna</a></li>
-            <li><a href="/pages/about-me.html">O mnie</a></li>
-            <li><a href="/pages/portfolio.html">Portfolio</a></li>
-            <li><a href="/pages/form-contact.html">Kontakt</a></li>
-          </ul>
-          <ul class="links-soc">
-            <li>
-              <a
-                aria-label="Przejdz na mój profil na Linked-In"
-                aria-hidden="true"
-                class="links-soc-item linked-in"
-                href="https://www.linkedin.com/in/dariusz-reczek-18a6a9214/"
-                target="blank"
-                ><img src="resources/linked-in-logo.svg" alt=""
-              /></a>
-            </li>
-            <li>
-              <a
-                class="links-soc-item git-hub"
-                href="https://github.com/d-reczek"
-                target="blank"
-                ><img src="resources/git-hub-logo.svg" alt=""
-              /></a>
-            </li>
-          </ul>
+<body>
+  <div class="wrapper">
+    <nav>
+      <div class="navigation">
+        <div class="container-logo">
+          <a href="./index.html"><img src="resources/my-logo.png" alt="" /></a>
         </div>
-      </nav>
-      <main>
-        <section class="main-page">
-          <div class="about-me-container">
-            <h1 class="h1-main-page">
-              Cześć mam na imię <br /><b>Darek Reczek</b>
-            </h1>
-            <p class="about-me-paragraph">
-              Jakiś czas temu stwierdziłem, że muszę zmienić coś w swoim życiu.
-            </p>
-            <blockquote class="about-me-paragraph-blockquote">
-              "...musisz sobie odpowiedzieć na jedno zaj...ie, ale to zaj...ie
-              ważne pytanie: co chcesz robić w życiu – i zacząć to robić"...
-            </blockquote>
-            <p class="about-me-paragraph">
-              Stwierdziłem, że lubie spędzać czas przy komputerze tworząc na nim
-              różne rzeczy oraz rozwiązując rozmaite problemy. Skoro
-              stwierdziłem, że lubie to robić więc zrobiłem krok żeby zacząć to
-              robić i rozpoczałem swoją przygodę z programowaniem.
-            </p>
-          </div>
-          <div class="my-photo">
-            <img src="resources/my-photo.jpg" alt="Moje zdjęcie nad morzem" />
-          </div>
-        </section>
-      </main>
-      <footer>
-        <p class="copy-right">&copy; 2021 All rights reserverd</p>
-        <p class="made-by">Made by D. Reczek</p>
-      </footer>
-    </div>
-    <script src="/main.js"></script>
-  </body>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+
+        <ul class="links-web">
+          <li><a href="./index.html">Strona główna</a></li>
+          <li><a href="./pages/about-me.html">O mnie</a></li>
+          <li><a href="./pages/portfolio.html">Portfolio</a></li>
+          <li><a href="./pages/form-contact.html">Kontakt</a></li>
+        </ul>
+        <ul class="links-soc">
+          <li>
+            <a aria-label="Przejdz na mój profil na Linked-In" aria-hidden="true" class="links-soc-item linked-in"
+              href="https://www.linkedin.com/in/dariusz-reczek-18a6a9214/" target="blank"><img
+                src="resources/linked-in-logo.svg" alt="" /></a>
+          </li>
+          <li>
+            <a class="links-soc-item git-hub" href="https://github.com/d-reczek" target="blank"><img
+                src="resources/git-hub-logo.svg" alt="" /></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main>
+      <section class="main-page">
+        <div class="about-me-container">
+          <h1 class="h1-main-page">
+            Cześć mam na imię <br /><b>Darek Reczek</b>
+          </h1>
+          <p class="about-me-paragraph">
+            Jakiś czas temu stwierdziłem, że muszę zmienić coś w swoim życiu.
+          </p>
+          <blockquote class="about-me-paragraph-blockquote">
+            "...musisz sobie odpowiedzieć na jedno zaj...ie, ale to zaj...ie
+            ważne pytanie: co chcesz robić w życiu – i zacząć to robić"...
+          </blockquote>
+          <p class="about-me-paragraph">
+            Stwierdziłem, że lubie spędzać czas przy komputerze tworząc na nim
+            różne rzeczy oraz rozwiązując rozmaite problemy. Skoro
+            stwierdziłem, że lubie to robić więc zrobiłem krok żeby zacząć to
+            robić i rozpoczałem swoją przygodę z programowaniem.
+          </p>
+        </div>
+        <div class="my-photo">
+          <img src="resources/my-photo.jpg" alt="Moje zdjęcie nad morzem" />
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p class="copy-right">&copy; 2021 All rights reserverd</p>
+      <p class="made-by">Made by D. Reczek</p>
+    </footer>
+  </div>
+  <script src="./main.js"></script>
+</body>
+
 </html>
