--- a/pages/form-contact.html
+++ b/pages/form-contact.html
@@ -1,107 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/reset.css" />
-    <link rel="stylesheet" href="/CSS/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" href="resources/my-logo.png" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <title>DR - przyszły Fronted Developer</title>
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <nav>
-        <div class="navigation">
-          <div class="container-logo">
-            <a href="/index.html"
-              ><img src="/resources/my-logo.png" alt=""
-            /></a>
-          </div>
-          <div class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./../CSS/reset.css" />
+  <link rel="stylesheet" href="./../CSS/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="icon" href="resources/my-logo.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,400&display=swap"
+    rel="stylesheet" />
+  <title>DR - przyszły Fronted Developer</title>
+</head>
 
-          <ul class="links-web">
-            <li><a href="/index.html">Strona główna</a></li>
-            <li><a href="/pages/about-me.html">O mnie</a></li>
-            <li><a href="/pages/portfolio.html">Portfolio</a></li>
-            <li><a href="/pages/form-contact.html">Kontakt</a></li>
-          </ul>
-          <ul class="links-soc">
-            <li>
-              <a
-                aria-label="Przejdz na mój profil na Linked-In"
-                aria-hidden="true"
-                class="links-soc-item linked-in"
-                href="https://www.linkedin.com/in/dariusz-reczek-18a6a9214/"
-                target="blank"
-                ><img src="resources/linked-in-logo.svg" alt=""
-              /></a>
-            </li>
-            <li>
-              <a
-                class="links-soc-item git-hub"
-                href="https://github.com/d-reczek"
-                target="blank"
-                ><img src="resources/git-hub-logo.svg" alt=""
-              /></a>
-            </li>
-          </ul>
+<body>
+  <div class="wrapper">
+    <nav>
+      <div class="navigation">
+        <div class="container-logo">
+          <a href="/index.html"><img src="/resources/my-logo.png" alt="" /></a>
         </div>
-      </nav>
-      <main>
-        <section class="contact-page">
-          <div class="wrapper contact-page-flex-container">
-            <div class="form-contact-container">
-              <!-- GITHUB doesnt work with PHP -->
-              <form class="form-contact" action="form.php" method="POST">
-                <h2 class="form-contact">Kontakt do mnie</h2>
-                <label for="email">E-mail</label>
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  required
-                  placeholder="Podaje swój e-mail"
-                />
-                <label for="name">Imie</label>
-                <input
-                  type="text"
-                  name="name"
-                  id="name"
-                  required
-                  placeholder="Podaj swoje imię"
-                />
-                <label>Wiadomość</label>
-                <textarea
-                  name="message"
-                  required
-                  placeholder="Wpisz swoją wiadomość"
-                ></textarea>
-                <button class="btn-form-send" type="submit">Wyślij</button>
-              </form>
-            </div>
-            <div class="photo-container">
-              <img src="/resources/form-photo.jpg" alt="" />
-            </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+
+        <ul class="links-web">
+          <li><a href="./../index.html">Strona główna</a></li>
+          <li><a href="./about-me.html">O mnie</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="./form-contact.html">Kontakt</a></li>
+        </ul>
+        <ul class="links-soc">
+          <li>
+            <a aria-label="Przejdz na mój profil na Linked-In" aria-hidden="true" class="links-soc-item linked-in"
+              href="https://www.linkedin.com/in/dariusz-reczek-18a6a9214/" target="blank"><img
+                src="resources/linked-in-logo.svg" alt="" /></a>
+          </li>
+          <li>
+            <a class="links-soc-item git-hub" href="https://github.com/d-reczek" target="blank"><img
+                src="resources/git-hub-logo.svg" alt="" /></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main>
+      <section class="contact-page">
+        <div class="wrapper contact-page-flex-container">
+          <div class="form-contact-container">
+            <!-- GITHUB doesnt work with PHP -->
+            <form class="form-contact" action="form.php" method="POST">
+              <h2 class="form-contact">Kontakt do mnie</h2>
+              <label for="email">E-mail</label>
+              <input type="email" name="email" id="email" required placeholder="Podaje swój e-mail" />
+              <label for="name">Imie</label>
+              <input type="text" name="name" id="name" required placeholder="Podaj swoje imię" />
+              <label>Wiadomość</label>
+              <textarea name="message" required placeholder="Wpisz swoją wiadomość"></textarea>
+              <button class="btn-form-send" type="submit">Wyślij</button>
+            </form>
           </div>
-        </section>
-      </main>
-      <footer>
-        <p class="copy-right">&copy; 2021 All rights reserverd</p>
-        <p class="made-by">Made by D. Reczek</p>
-      </footer>
-    </div>
-    <script src="/main.js"></script>
-  </body>
+          <div class="photo-container">
+            <img src="/resources/form-photo.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p class="copy-right">&copy; 2021 All rights reserverd</p>
+      <p class="made-by">Made by D. Reczek</p>
+    </footer>
+  </div>
+  <script src="./../main.js"></script>
+</body>
+
 </html>
