fix rest of path

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -20,7 +20,7 @@
     <nav>
       <div class="navigation">
         <div class="container-logo">
-          <a href="/index.html"><img src="/resources/my-logo.png" alt="" /></a>
+          <a href="./../index.html"><img src="./../resources/my-logo.png" alt="" /></a>
         </div>
         <div class="hamburger">
           <span class="bar"></span>
@@ -38,11 +38,11 @@
           <li>
             <a aria-label="Przejdz na mój profil na Linked-In" aria-hidden="true" class="links-soc-item linked-in"
               href="https://www.linkedin.com/in/dariusz-reczek-18a6a9214/" target="blank"><img
-                src="resources/linked-in-logo.svg" alt="" /></a>
+                src="./../resources/linked-in-logo.svg" alt="" /></a>
           </li>
           <li>
             <a class="links-soc-item git-hub" href="https://github.com/d-reczek" target="blank"><img
-                src="resources/git-hub-logo.svg" alt="" /></a>
+                src="./../resources/git-hub-logo.svg" alt="" /></a>
           </li>
         </ul>
       </div>
