--- a/pages/form-contact.html
+++ b/pages/form-contact.html
@@ -52,7 +52,7 @@
         <div class="wrapper contact-page-flex-container">
           <div class="form-contact-container">
             <!-- GITHUB doesnt work with PHP -->
-            <form class="form-contact" action="form.php" method="POST">
+            <form class="form-contact" action="./../form.php" method="POST">
               <h2 class="form-contact">Kontakt do mnie</h2>
               <label for="email">E-mail</label>
               <input type="email" name="email" id="email" required placeholder="Podaje swój e-mail" />
