--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -52,7 +52,9 @@
         <div class="wrapper">
           <h2 class="h2-portfolio-page">Moje projekty</h2>
           <div class="grid-projects">
-            <div class="project-box project-1"><a href="./../Project-1/index.html">Project 1</a></div>
+            <div class="project-box project-1"><a
+                href="../../../jfdzr5-projects-d-reczek/JS-Projects/Project-1/index.html">Project
+                1</a></div>
             <div class="project-box project-2"><a href="">Project 2</a></div>
             <div class="project-box project-3"><a href="">Project 3</a></div>
           </div>
