add section about me

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -51,6 +51,29 @@
       <section class="about-me-page"></section>
       <div class="wrapper">
         <h2 class="h2-about-me">O mnie</h2>
+        <div class="about-me-page-container">
+          <p class="about-me-container">Mam na imię Darek. Jestem absolwentem Akademii Górniczo - Hutniczej na Wydziale
+            Odlewnictwa, kierunek
+            Metalurgia. Aktualnie pracuję jako konstruktor maszyn dla branży górniczej. <br> <br>
+            Od zawsze byłem zainteresowany branżą IT, od najmłodszych lat ogólnie pojęta informatyka była moją pasją.
+            Potrafiłem spędzać godziny a nawet dni na próbach rozwiązywanie różnych problemów informatycznych. Nie
+            potrafiłem spokojnie zasnąć z myślą, że nie udało mi się czegoś naprawić lub rozwiązać jakiegoś problemu,
+            dlatego też zawsze próbowałem osiągnąć swój cel, nigdy się nie poddawałem i próbowałm za wszelką cenę
+            doprawdzić daną sprawę do końca. <br> <br>
+            Po szkole średniej niestety nie zdecydowałem się aby swoją pasję i zainteresowania połączyć z rozwojem
+            zawodowym, czego do dzisiaj żałuje. Dlatego też postanowiłem, że spóbuje swoich sił w branży IT i zostanę
+            programistą tak aby lubić to co sprawia mi frajdę. <br> <br>
+            Programowania zacząłem się uczyć w maju 2021 od podstaw HTML, CSS oraz języka Java Script. Udało mi się
+            stworzyć swoją pierwszą stronę internetową. Poczułem, że programowanie to jest to co lubię dlatego w
+            sierpniu
+            2021 zapisałem się na Boot Camp Junior Fronte End Developer w InfoShare Academy.
+            Aktualnie jestem w trakcie kursu, udało mi się stworzyć kilka mniejszych projektów takich jak własnie ta
+            strona czy inne projekty zawarte w zakładce <a class="portfolio-link" href="./portfolio.html"> portfolio</a>
+          </p>
+          <div class="my-photo-small">
+            <img src="./../resources/my-phot-small.png" alt="Moje zdjęcie nad morzem" />
+          </div>
+        </div>
       </div>
     </main>
     <footer>
