--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -52,10 +52,13 @@
         <div class="wrapper">
           <h2 class="h2-portfolio-page">Moje projekty</h2>
           <div class="grid-projects">
-            <div class="project-box project-1"><a href="./../Project-1/index.html">Project
-                1</a></div>
-            <div class="project-box project-2"><a href="">Project 2</a></div>
-            <div class="project-box project-3"><a href="">Project 3</a></div>
+            <div class="project-box project-1"><a class="portfolio-page-link"
+                href="./../../../jfdzr5-projects-d-reczek/project-1/index.html">Projekt CSS</a></div>
+            <div class="project-box project-2"><a class="portfolio-page-link"
+                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-1/index.html">Gra papier, <br> kamień,
+                nożyce</a></div>
+            <div class="project-box project-3"><a class="portfolio-page-link" href="">Project 3</a></div>
+
           </div>
         </div>
       </section>
