--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -62,10 +62,10 @@
             doprawdzić daną sprawę do końca. <br> <br>
             Po szkole średniej niestety nie zdecydowałem się aby swoją pasję i zainteresowania połączyć z rozwojem
             zawodowym, czego do dzisiaj żałuje. Dlatego też postanowiłem, że spóbuje swoich sił w branży IT i zostanę
-            programistą tak aby lubić to co sprawia mi frajdę. <br> <br>
+            programistą tak aby robić to co sprawia mi przyjemność. <br> <br>
             Programowania zacząłem się uczyć w maju 2021 od podstaw HTML, CSS oraz języka Java Script. Udało mi się
-            stworzyć swoją pierwszą stronę internetową. Poczułem, że programowanie to jest to co lubię dlatego w
-            sierpniu
+            stworzyć swoją pierwszą stronę internetową. Poczułem, że programowanie dajs mi sporo satysfakcji dając
+            bodźce do ciągłego rozwijania swoich umiejętności i pogłębiania wiedzy dlatego w sierpniu
             2021 zapisałem się na Boot Camp Junior Fronte End Developer w InfoShare Academy.
             Aktualnie jestem w trakcie kursu, udało mi się stworzyć kilka mniejszych projektów takich jak własnie ta
             strona czy inne projekty zawarte w zakładce <a class="portfolio-link" href="./portfolio.html"> portfolio</a>
