--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <ul class="links-soc">
           <li>
             <a aria-label="Przejdz na mój profil na Linked-In" aria-hidden="true" class="links-soc-item linked-in"
-              href="https://www.linkedin.com/in/dariusz-reczek-18a6a9214/" target="blank"><img
+              href="https://www.linkedin.com/in/dariusz-reczek/" target="blank"><img
                 src="./resources/linked-in-logo.svg" alt="" /></a>
           </li>
           <li>
