--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -68,7 +68,8 @@
             bodźce do ciągłego rozwijania swoich umiejętności i pogłębiania wiedzy dlatego w sierpniu
             2021 zapisałem się na Boot Camp Junior Fronte End Developer w InfoShare Academy.
             Aktualnie jestem w trakcie kursu, udało mi się stworzyć kilka mniejszych projektów takich jak własnie ta
-            strona czy inne projekty zawarte w zakładce <a class="portfolio-link" href="./portfolio.html"> portfolio</a>
+            strona czy inne projekty zawarte w zakładce<a class="portfolio-link" href="./portfolio.html"> portfolio</a>
+            do której Cię zapraszam.
           </p>
           <div class="my-photo-small">
             <img src="./../resources/my-phot-small.png" alt="Moje zdjęcie nad morzem" />
