--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -57,7 +57,7 @@
             <div class="project-box project-2"><a class="portfolio-page-link"
                 href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-1/index.html">Gra papier, <br> kamień,
                 nożyce</a></div>
-            <div class="project-box project-3"><a class="portfolio-page-link" href="">Project 3</a></div>
+            <!-- <div class="project-box project-3"><a class="portfolio-page-link" href="">Project 3</a></div> -->
 
           </div>
         </div>
