--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <section class="main-page">
         <div class="about-me-container">
           <h1 class="h1-main-page">
-            Cześć mam na imię <br /><b>Darek Reczek</b>
+            Cześć, <br> mam na imię <br /><b>Darek Reczek</b>
           </h1>
           <p class="about-me-paragraph">
             Jakiś czas temu stwierdziłem, że muszę zmienić coś w swoim życiu.
@@ -61,10 +61,10 @@
             ważne pytanie: co chcesz robić w życiu – i zacząć to robić"...
           </blockquote>
           <p class="about-me-paragraph">
-            Stwierdziłem, że lubie spędzać czas przy komputerze tworząc na nim
-            różne rzeczy oraz rozwiązując rozmaite problemy. Skoro
-            stwierdziłem, że lubie to robić więc zrobiłem krok żeby zacząć to
-            robić i rozpoczałem swoją przygodę z programowaniem.
+            Bardzo lubie spędzać czas przy komputerze tworząc na nim
+            różne rzeczy oraz rozwiązując rozmaite problemy. Pomyślałem, że to chce w życiu robić i zacząłem to robić.
+            To był mój pierwszy krok do zaczęcia przygody z programowaniem.
+
           </p>
         </div>
         <div class="my-photo">
