--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <p class="about-me-paragraph">
             Bardzo lubie spędzać czas przy komputerze tworząc na nim
             różne rzeczy oraz rozwiązując rozmaite problemy. Pomyślałem, że to chce w życiu robić i zacząłem to robić.
-            To był mój pierwszy krok do zaczęcia przygody z programowaniem.
+            To był mój pierwszy krok do rozpoczęcia przygody z programowaniem.
 
           </p>
         </div>
