index text edit

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
           </blockquote>
           <p class="about-me-paragraph">
             Bardzo lubie spędzać czas przy komputerze tworząc na nim
-            różne rzeczy oraz rozwiązując rozmaite problemy. Pomyślałem, że to chce w życiu robić i zacząłem to robić.
+            różne rzeczy oraz rozwiązując rozmaite problemy. Pomyślałem, że tym chciałabym się zajmować więc zacząłem
+            działać.
             To był mój pierwszy krok do rozpoczęcia przygody z programowaniem.
-
           </p>
         </div>
         <div class="my-photo">
