add blockquote author

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             "...musisz sobie odpowiedzieć na jedno zaj...ie, ale to zaj...ie
             ważne pytanie: co chcesz robić w życiu – i zacząć to robić"...
           </blockquote>
+          <p class="blockquote-author">"Chłopaki nie płaczą" Olaf Lubaszenko</p>
           <p class="about-me-paragraph">
             Bardzo lubie spędzać czas przy komputerze tworząc na nim
             różne rzeczy oraz rozwiązując rozmaite problemy. Pomyślałem, że tym chciałabym się zajmować więc zacząłem
