fix link game pac man

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -60,7 +60,7 @@
                 href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-1/index.html">Gra papier, <br> kamień,
                 nożyce</a></div>
             <div class="project-box project-2"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/project-3/">Gra Pac-Man</a></div>
+                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-3/index.html">Gra Pac-Man</a></div>
 
           </div>
         </div>
