fix hover and add new photo in about me

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -72,7 +72,7 @@
             do której Cię zapraszam.
           </p>
           <div class="my-photo-small">
-            <img src="./../resources/my-phot-small.png" alt="Moje zdjęcie nad morzem" />
+            <img src="./../resources/my-photo-new.png" alt="Moje zdjęcie nad morzem" />
           </div>
         </div>
       </div>
