edit portfolio page

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -63,6 +63,9 @@
                 href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-3/index.html">Gra Pac-Man</a></div>
             <div class="project-box project-2"><a class="portfolio-page-link"
                 href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-5/index.html">To-Do-App</a></div>
+            <div class="project-box project-4"><a class="portfolio-page-link"
+                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-4/index.html">Wyszukiwarka filmów</a>
+            </div>
 
           </div>
         </div>
